[filtersPills] fix label widh and radius

--- a/packages/scss/src/components/filterPill/component.scss
+++ b/packages/scss/src/components/filterPill/component.scss
@@ -8,6 +8,7 @@
 @use '@lucca-front/scss/src/components/clear/exports' as clear;
 @use '@lucca-front/scss/src/components/segmentedControl/exports' as segmentedControl;
 @use '@lucca-front/scss/src/components/textField/exports' as textField;
+@use '@lucca-front/scss/src/components/formLabel/exports' as formLabel;
 
 @mixin component($atRoot: namespace.$defaultAtRoot) {
 	display: var(--components-filterPill-display);
@@ -40,7 +41,11 @@
 
 		.filterPill_popover-content-option {
 			padding: var(--pr-t-spacings-50) var(--pr-t-spacings-100);
-			border-radius: var(--pr-t-border-radius-50);
+			border-radius: var(--pr-t-border-radius-default);
+
+			.formLabel {
+				@include formLabel.widthAuto;
+			}
 
 			&:hover {
 				background-color: var(--palettes-neutral-50);
